--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -19,7 +19,9 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: synvert.net
+  hosts:
+    - synvert.net
+    - www.synvert.net
   # Proxy connects to your container on port 80 by default.
   # app_port: 3000
   healthcheck:
